Change button label from 'WEEKLY TREND' to 'TREND'

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 </select>
 
                 <div class="flex bg-slate-950 p-1 rounded-lg border border-slate-800">
-                    <button onclick="setMode('week')" id="mode-week" class="px-3 py-1 text-[10px] font-bold rounded bg-cyan-600 text-white transition-all">WEEKLY TREND</button>
+                    <button onclick="setMode('week')" id="mode-week" class="px-3 py-1 text-[10px] font-bold rounded bg-cyan-600 text-white transition-all">TREND</button>
                     <button onclick="setMode('day')" id="mode-day" class="px-3 py-1 text-[10px] font-bold rounded text-slate-500 hover:text-slate-300 transition-all">SPECIFIC DAY</button>
                 </div>
 
